--- a/LogicAppAdvancedTool.csproj
+++ b/LogicAppAdvancedTool.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.2.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.13.1" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
@@ -66,7 +67,6 @@
     <PackageReference Include="Microsoft.DiaSymReader" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.410601">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -74,9 +74,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAzure.ResourceStack">
       <HintPath>DLLs\Microsoft.WindowsAzure.ResourceStack.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Configuration.ConfigurationManager">
-      <HintPath>DLLs\System.Configuration.ConfigurationManager.dll</HintPath>
     </Reference>
     <Reference Include="ZstdSharp">
       <HintPath>DLLs\ZstdSharp.dll</HintPath>
@@ -100,6 +97,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Update="Temp\ConnectionString.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Temp\MIToken.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
